<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="exit">再次点击将退出微日程</string>
	<string name="app_name">微日程</string>
	<string name="tab_name_schedule">日程</string>
	<string name="tab_name_dynamic">动态</string>
	<string name="tab_name_friend">好友</string>
	<string name="three_days_before">前三天</string>
	<string name="today">今天</string>
	<string name="tomorrow">明天</string>
	<string name="this_week">本周</string>
	<string name="xlistview_header_hint_normal">下拉刷新</string>
	<string name="xlistview_header_hint_ready">松开刷新数据</string>
	<string name="xlistview_header_hint_loading">正在加载...</string>
	<string name="xlistview_header_last_time">上次更新时间：</string>
	<string name="xlistview_footer_hint_normal">查看更多</string>
	<string name="xlistview_footer_hint_ready">松开载入更多</string>
	<!-- newSchedule_screen -->
	<string name="schedule_new_title">添加日程</string>
	<string name="schedule_new_back">返回</string>
	<string name="schedule_new_save">保存</string>
	<string name="notice">注意</string>
	<string name="activity">活动</string>
	<string name="appointment">约会</string>
	<string name="travel">出行</string>
	<string name="entertainment">娱乐</string>
	<string name="eat">吃饭</string>
	<string name="work">工作</string>
	<string name="share">分享</string>
	<string name="remind">提醒</string>
	<string name="important">重要</string>
    <string name="not_remind">不提醒</string>
    <string name="repeat_remind">重复提醒</string>
    <string name="repeat_none">无</string>
    <string name="repeat_per_day">每天</string>
    <string name="repeat_per_month">每月</string>
    <string name="repeat_per_year">每年</string>
    <string name="repeat_week_monday">一</string>
    <string name="repeat_week_tuesday">二</string>
    <string name="repeat_week_wednesday">三</string>
    <string name="repeat_week_thursday">四</string>
    <string name="repeat_week_friday">五</string>
    <string name="repeat_week_saturday">六</string>
    <string name="repeat_week_sunday">日</string>
    <string name="stage_remind">阶段提醒</string>
	<!-- editSchedule_screen -->
	<string name="schedule_edit_title">编辑</string>
	<string name="schedule_edit_delete">删除</string>
	<string name="sunday">星期日</string>
	<string name="monday">星期一</string>
	<string name="tuesday">星期二</string>
	<string name="wednesday">星期三</string>
	<string name="thursday">星期四</string>
	<string name="friday">星期五</string>
	<string name="saturday">星期六</string>


	<string name="friend_add">加为好友</string>
	<string name="friend_invite">邀请</string>

	<string name="friend_show">我的好友</string>
	<string name="friend_contact_show">联系人</string>
	<string name="contact_show">联系人</string>
	<string name="contact_use_show">正在使用 微日程 的好友</string>
	
	<string name="about">关于</string>
	<string name="aboutintroduce">微日程Android版</string>
	<string name="aboutcontent">微日程，让生活有序，让生活更简单</string>
    <string name="aboutresverseone">Copyright©archermind.</string>
    <string name="aboutresversetwo">All Reserved.</string>
 
    <string name="feedback">意见反馈</string>
    <string name="sendfeedback">  发送  </string>
    <string name="feedbackhintcontent">写下您宝贵的意见～您的每一条建议我们都会仔细阅读，感谢您对《微日程》的关注。</string>
    
    <string name="setting">设置</string>
    <string name="settingweather">天气</string>
    <string name="settingoutofdata">过期日程保留</string>
    <string name="settingalarm">提醒设置</string>
    <string name="settinghelp">帮助</string>
    
    
    <string name="app_upgrade_confirm">确定</string>
    <string name="app_upgrade_cancel">取消</string>
    <string name="check_new_version">发现新版本,确定更新吗?</string>
    <string name="check_new_version_title">检查新版本</string>
    <string name="check_new_version_message">正在获取新版本信息 ....</string>
    <string name="check_new_version_no_network">未找到网络连接，请设置后重试!</string>
    <string name="check_new_version_null">未找到新版本信息，请稍后再试!</string>
    <string name="check_new_version_exception">获取新版本信息出错，请稍后再试!</string>
    <string name="check_new_version_latest">已经是最新版本!</string>
    <string name="app_upgrade_download_sucess">新版本下载成功,开始安装.</string>
    <string name="app_upgrade_download_fail">新版本下载失败，请稍后再试.</string>
    
    <string name="sms_body">"我正在使用微日程，这是一款和家人、朋友一起分享自己日程的软件，下载地址是http://arc.archermind.com"</string>
    <string name="prompt">"提示"</string>
    <string name="content">"确定要删除该条日程吗？"</string>
</resources>