<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/repeat_register_bg"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/title_setting_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <Button
            android:id="@+id/title_bar_setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/schedule_new_back_selector"
            android:text="@string/schedule_new_back"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/title_bar_setting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@+string/setting"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="175dp"
        android:layout_below="@+id/title_setting_top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/settingbg"
        android:clickable="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/datatime"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@drawable/outdateofschedule" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/settingoutofdata"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="365天"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/schedule_new_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@drawable/settingweather" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/settingweather"
                android:textColor="#000000" />

            <com.archermind.schedule.Views.SettingSlipSwitch
                android:id="@+id/settingslipswitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp" />
            
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/schedule_new_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@drawable/settingalarm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/settingalarm"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/schedule_new_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@drawable/settinghelp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/settinghelp"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>