<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f6f6f6"
    android:orientation="vertical" >

    <com.archermind.schedule.Views.VerticalScrollView
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#0a0"
            android:focusable="true"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/list_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#f6f6f6"
                    android:clickable="true"
                    android:text="@string/three_days_before"
                    android:textColor="@color/textview" />

                <FrameLayout
                    android:id="@+id/layout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" >

                        <ImageView
                            android:layout_width="4dip"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="72.0dip"
                            android:background="#ffff0000"
                            android:scaleType="fitXY"
                            android:src="@drawable/feed_item_track" />
                    </RelativeLayout>

                    <ListView
                        android:id="@+id/list01"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:cacheColorHint="#00000000"
                        android:listSelector="@drawable/listview_item_selector"
                        android:divider="@drawable/listview_divider" />
                </FrameLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/dividing_line_tile" />

                <TextView
                    android:id="@+id/tv02"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#f6f6f6"
                    android:clickable="true"
                    android:text="@string/today"
                    android:textColor="@color/textview" />

                <FrameLayout
                    android:id="@+id/layout2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" >

                        <ImageView
                            android:layout_width="4dip"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="72.0dip"
                            android:background="#ffff0000"
                            android:scaleType="fitXY"
                            android:src="@drawable/feed_item_track" />
                    </RelativeLayout>

                    <com.archermind.schedule.Views.XListView
                        android:id="@+id/list02"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:cacheColorHint="#00000000"
                        android:listSelector="@drawable/listview_item_selector"
                        android:divider="@drawable/listview_divider" />
                </FrameLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/dividing_line_tile" />

                <TextView
                    android:id="@+id/tv03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#f6f6f6"
                    android:clickable="true"
                    android:text="@string/tomorrow"
                    android:textColor="@color/textview" />

                <FrameLayout
                    android:id="@+id/layout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" >

                        <ImageView
                            android:id="@+id/timeline_track"
                            android:layout_width="4dip"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="72.0dip"
                            android:background="#ffff0000"
                            android:scaleType="fitXY"
                            android:src="@drawable/feed_item_track" />
                    </RelativeLayout>

                    <ListView
                        android:id="@+id/list03"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:cacheColorHint="#00000000"
                        android:listSelector="@drawable/listview_item_selector"
                        android:divider="@drawable/listview_divider" />
                </FrameLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/dividing_line_tile" />

                <TextView
                    android:id="@+id/tv04"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#f6f6f6"
                    android:clickable="true"
                    android:text="@string/this_week"
                    android:textColor="@color/textview" />

                <FrameLayout
                    android:id="@+id/layout4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" >

                        <ImageView
                            android:id="@+id/timeline_track"
                            android:layout_width="4dip"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="72.0dip"
                            android:background="#ffff0000"
                            android:scaleType="fitXY"
                            android:src="@drawable/feed_item_track" />
                    </RelativeLayout>

                    <ListView
                        android:id="@+id/list04"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:cacheColorHint="#00000000"
                        android:listSelector="@drawable/listview_item_selector"
                        android:divider="@drawable/listview_divider" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </com.archermind.schedule.Views.VerticalScrollView>

</LinearLayout>